fix(Footer): align socials to end on desktop

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -98,5 +98,6 @@
 
   .socials {
     width: 10.5rem;
+    justify-content: end;
   }
 }
